# docs/swagger.json
@@ -1385,10 +1385,17 @@
             "get": {
                 "description": "Get all reviews for a specific product",
                 "tags": [
-                    "Reviews"
+                    "products"
                 ],
                 "summary": "Get product reviews",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT токен пользователя",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "Product ID",
@@ -1401,12 +1408,9 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/models.Review"
-                                }
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Review"
                             }
                         }
                     },
