# models/category.go
@@ -1,7 +1,8 @@
 package models
 
 type Category struct {
-	ID       int      `gorm:"primaryKey" json:"id"`
-	Name     string    `json:"name"`
-	Products []Product `gorm:"foreignKey:CategoryID" json:"products"`
+	ID          int       `gorm:"primaryKey" json:"id"`
+	Name        string    `json:"name"`
+	Description string    `json:"description"`
+	Products    []Product `gorm:"foreignKey:CategoryID" json:"products"`
 }
